Added backbone to mergesort, haven't animated yet

--- a/sorting/index.html
+++ b/sorting/index.html
@@ -52,6 +52,8 @@
                         <label for=bubblesort>Bubblesort</label>
                         <input type=radio id=quicksort name=sorting value=quicksort>
                         <label for=quicksort>Quicksort</label>
+                        <input type=radio id=mergesort name=sorting value=mergesort>
+                        <label for=mergesort>Mergesort</label>
                     </div>
                     <div>
                         <button type=submit>Sort</button>
